--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
   margin: 0;
 }
 
+html {
+  overflow-y: scroll;
+}
 
 :root {
   font-family: "Roboto", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -13,14 +16,10 @@
   --text-secondary: #ffffffa1;
   --chip-color: #444e56;
 
-
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-
 }
 
 .ligth-theme {
@@ -37,15 +36,9 @@ body {
   background-color: var(--secondary);
 }
 
-
-
-
-
-
-
-
-/* @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
+div {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
