--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -12,6 +12,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0px 20px;
 }
 
 h2 {
@@ -31,4 +32,10 @@ h2 {
 
 .theme-button {
   color: var(--text) !important;
+}
+
+@media screen and (max-width: 900px) {
+  .techover-logo {
+    display: none;
+  }
 }
