--- a/src/components/Searchbox.css
+++ b/src/components/Searchbox.css
@@ -3,4 +3,13 @@
   margin: 30px auto;
   display: flex;
   justify-content: space-between;
+  padding: 0px 20px;
+}
+
+@media screen and (max-width: 700px) {
+  .search-box-container {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+  }
 }
