--- a/src/pages/CountryInfo.css
+++ b/src/pages/CountryInfo.css
@@ -1,3 +1,7 @@
+main {
+  padding: 0 20px;
+}
+
 .main-container {
   max-width: 1200px;
   margin: 30px auto;
@@ -14,7 +18,7 @@
 
 .flag-container {
   width: 545px;
-  height: 544px;
+  height: auto;
 }
 
 .flag-img {
@@ -38,7 +42,8 @@ h1 {
 }
 
 .sub-container {
-  width: 300px;
+  max-width: 300px;
+  width: 100%;
   margin-bottom: 60px;
 }
 
@@ -51,6 +56,38 @@ h1 {
 .border-countries-container {
   display: flex;
   overflow-x: auto;
-  width: 350px;
+  width: 100%;
+  max-width: 300px;
   gap: 5px;
+}
+
+@media screen and (max-width: 1040px) {
+  .info {
+    flex-direction: column;
+  }
+
+  .sub-container {
+    margin-bottom: 5px;
+  }
+
+  .border-countries {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .flag-container {
+    width: 400px;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .flag-container {
+    width: 300px;
+  }
+
+  .country {
+    flex-direction: column;
+    margin-top: 10px;
+    gap: 10px;
+  }
 }
