--- a/src/components/Searchbox.css
+++ b/src/components/Searchbox.css
@@ -6,10 +6,19 @@
   padding: 0px 20px;
 }
 
+.search-items {
+  width: 300px;
+}
+
+
 @media screen and (max-width: 700px) {
   .search-box-container {
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
+  }
+
+  .search-items {
+    width: 100%;
   }
 }
